# translator

./: docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: model.py
frontend/: Dockerfile  app.py  pyproject.toml
