[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["eiden"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.4.4"
uvicorn = "^0.18.3"
tabulate = "^0.8.10"
requests = "^2.28.1"
python-multipart = "^0.0.5"
future = "^0.18.2"
networkx = "^2.8.6"
streamlit = "^1.12.2"

[tool.poetry.dev-dependencies]
protobuf = "3.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
